syntax = "proto3";

package protobuf;

option go_package = "SentryFlow/protobuf";

import "google/protobuf/timestamp.proto";


message ClientInfo {
  string hostName = 1;
  string IPAddress = 2;
}

message APILog {
  uint64 id = 1;
  string timeStamp = 2;

  string srcNamespace = 11;
  string srcName = 12;
  map<string, string> srcLabel = 13;

  string srcType = 21;
  string srcIP = 22;
  string srcPort = 23;

  string dstNamespace = 31;
  string dstName = 32;
  map<string, string> dstLabel = 33;

  string dstType = 41;
  string dstIP = 42;
  string dstPort = 43;

  string protocol = 51;
  string method = 52;
  string path = 53;
  int32 responseCode = 54;
}

message APILogV2 {
  int32 context_id = 1;
  google.protobuf.Timestamp timestamp = 2;
  Source source = 3;
  Destination destination = 4;
  Request request = 5;
  Response response = 6;
  string Protocol = 7;
}

message Source {
  string name = 1;
  string namespace = 2;
  string ip = 3;
  int32 port = 4;
  string type = 5;
}

message Destination {
  string name = 1;
  string namespace = 2;
  string ip = 3;
  int32 port = 4;
  string type = 5;
}

message Request {
  map<string,string> headers = 1;
  string body = 2;
}

message Response {
  map<string,string> headers = 1;
  string body = 2;
}

message APIMetrics {
  map<string, uint64> perAPICounts = 1;
  // @todo: add some more metrics here
}

message MetricValue {
  map<string, string> value = 1;
}

message EnvoyMetrics {
  string timeStamp = 1;
  
  string namespace = 11;
  string name = 12;
  string IPAddress = 13;
  map<string, string> labels = 14;

  map<string, MetricValue> metrics = 21;
}

service SentryFlow {
  rpc GetAPILog(ClientInfo) returns (stream APILog); // To be deprecated
  rpc GetAPILogV2(ClientInfo) returns (stream APILogV2);
  rpc GetAPIMetrics(ClientInfo) returns (stream APIMetrics);
  rpc GetEnvoyMetrics(ClientInfo) returns (stream EnvoyMetrics);
}

